--- a/src/components/sections/Pricing.astro
+++ b/src/components/sections/Pricing.astro
@@ -46,7 +46,7 @@ const data = Object.assign({}, ...content);
                   ))}
                 </ul>
               </div>
-              <a href="#" class="btn">
+              <a href={item.cta.action} class="btn">
                 <span class="animated-button">
                   <span>{item.cta.text}</span>
                 </span>
