fix: moved .nojekly file

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const BASE_GITHUB = "/cv-sylvester-josue-rojas/";
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
-const pathScripts = `assets/scripts`;
+const pathScripts = `/assets/scripts`;
 
 const resolvedImageWithDomain = new URL(`${BASE_GITHUB}opengraph.jpg`, Astro.site).toString();
 
