--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -3,6 +3,8 @@ import type { Entry } from "contentful";
 import type { ItemFields, Link } from "../../models/content.model";
 import { Image } from "@astrojs/image/components";
 import logo from "../../assets/images/logo.png";
+import cv_resume_en from "../../assets/resume_en.pdf";
+import cv_resume_es from "../../assets/resume_es.pdf";
 
 interface Props {
   lang: string;
@@ -16,7 +18,7 @@ const data = Object.assign({}, ...content);
 <header class="header">
   <!-- logo -->
   <div class="logo">
-    <a href="/">
+    <a href="/cv-sylvester-josue-rojas/">
       <Image
         src={logo}
         width={36}
@@ -36,10 +38,24 @@ const data = Object.assign({}, ...content);
   <a href="/" class="menu-btn"><span></span></a>
 
   <!-- download cv button -->
-  <a href="#" class="btn download-cv-btn">
-    <span class="animated-button"><span>{data.fields.btnDownload}</span></span>
-    <i class="icon fas fa-download"></i>
-  </a>
+
+  {
+    lang === "en-US" ? (
+      <a href={cv_resume_en} download class="btn download-cv-btn">
+        <span class="animated-button">
+          <span>{data.fields.btnDownload}</span>
+        </span>
+        <i class="icon fas fa-download" />
+      </a>
+    ) : (
+      <a href={cv_resume_es} download class="btn download-cv-btn">
+        <span class="animated-button">
+          <span>{data.fields.btnDownload}</span>
+        </span>
+        <i class="icon fas fa-download" />
+      </a>
+    )
+  }
 
   <!-- header sidebar -->
   <div class="header-sidebar">
@@ -69,13 +85,13 @@ const data = Object.assign({}, ...content);
                 lang === "en-US" ? (
                   <a href="/cv-sylvester-josue-rojas/es">
                     <span class="animated-button">
-                      <span>{lang.split('-')[0]}</span>
+                      <span>ES</span>
                     </span>
                   </a>
                 ) : (
                   <a href="/cv-sylvester-josue-rojas/">
                     <span class="animated-button">
-                      <span>{lang.split('-')[0]}</span>
+                      <span>EN</span>
                     </span>
                   </a>
                 )
