feat: Integrated recapcha script

--- a/src/components/sections/ContactInfo.astro
+++ b/src/components/sections/ContactInfo.astro
@@ -32,7 +32,6 @@ const data = Object.assign({}, ...content);
         value="New Submission from Web3Forms"
       />
       <input type="checkbox" name="botcheck" id="" style="display: none;" />
-
       <div class="group-val">
         <div class="label">
           {data.fields.formFields.name_field.label}
@@ -80,6 +79,7 @@ const data = Object.assign({}, ...content);
         </div>
         <div id="result" class="align-center"></div>
       </div>
+      <div id="html_element"></div>
       <div class="group-bts">
         <button type="submit" class="btn">
           <span class="animated-button">
