--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3266,7 +3266,10 @@ blockquote {
 
 /* - Contacts */
 
+#html_element { padding: 27px 0; }
+
 .text-green-500 { color: #FDD935; }
+
 .text-red-500 { color: darkred; }
 
 .section.contacts .alert-success {
@@ -3286,7 +3289,7 @@ blockquote {
 
 .contact-form .group-val {
   position: relative;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .contact-form .group-val .label {
