--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import ContactInfo from "../components/sections/ContactInfo.astro";
 import Experience from "../components/sections/Experience.astro";
 import BackgroundGardient from "../components/shared/BackgroundGardient.astro";
 
-const contentTypes = await contentfulClient.getEntries<ItemFields>();
+const contentType = await contentfulClient.getEntries<ItemFields>();
 const getContentById = (id: string) =>
-  contentTypes.items.filter((item) => item.metadata.tags[0].sys.id === id);
+  contentType.items.filter((item) => item.metadata.tags[0].sys.id === id);
 ---
 
 <Layout lang="en-US" title="Josue Rojas" content={getContentById("head")}>
