--- a/src/components/shared/MetaTags.astro
+++ b/src/components/shared/MetaTags.astro
@@ -92,7 +92,7 @@ const makeTitle = title
 }
 
 <!-- Fonts -->
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 <link
   href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
   rel="stylesheet"
