--- a/src/components/shared/Scripts.astro
+++ b/src/components/shared/Scripts.astro
@@ -1,16 +1,23 @@
-<script is:inline src={`assets/scripts/jquery.min.js`}></script>
-<script is:inline src={`assets/scripts/velocity.min.js`}></script>
-<script is:inline src={`assets/scripts/jquery.validate.js`}></script>
-<script is:inline src={`assets/scripts/magnific-popup.js`}></script>
-<script is:inline src={`assets/scripts/typed.js`}></script>
-<script is:inline src={`assets/scripts/jarallax.js`}></script>
-<script is:inline src={`assets/scripts/jarallax-video.js`}></script>
-<script is:inline src={`assets/scripts/jarallax-element.js`}></script>
-<script is:inline src={`assets/scripts/imagesloaded.pkgd.js`}></script>
-<script is:inline src={`assets/scripts/isotope.pkgd.js`}></script>
-<script is:inline src={`assets/scripts/owl.carousel.js`}></script>
-<script is:inline src={`assets/scripts/swiper.js`}></script>
-<script is:inline src={`assets/scripts/main.js`}></script>
+---
+const resolvedPathDomain = new URL(
+  `/cv-sylvester-josue-rojas/assets/scripts/`,
+  Astro.site
+).toString();
+---
+
+<script is:inline src={`${resolvedPathDomain}jquery.min.js`}></script>
+<script is:inline src={`${resolvedPathDomain}velocity.min.js`}></script>
+<script is:inline src={`${resolvedPathDomain}jquery.validate.js`}></script>
+<script is:inline src={`${resolvedPathDomain}magnific-popup.js`}></script>
+<script is:inline src={`${resolvedPathDomain}typed.js`}></script>
+<script is:inline src={`${resolvedPathDomain}jarallax.js`}></script>
+<script is:inline src={`${resolvedPathDomain}jarallax-video.js`}></script>
+<script is:inline src={`${resolvedPathDomain}jarallax-element.js`}></script>
+<script is:inline src={`${resolvedPathDomain}imagesloaded.pkgd.js`}></script>
+<script is:inline src={`${resolvedPathDomain}isotope.pkgd.js`}></script>
+<script is:inline src={`${resolvedPathDomain}owl.carousel.js`}></script>
+<script is:inline src={`${resolvedPathDomain}swiper.js`}></script>
+<script is:inline src={`${resolvedPathDomain}main.js`}></script>
 <script
   data-name="BMC-Widget"
   data-cfasync="false"
